--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-   <link rel="stylesheet" href="./assets/styles/form.css">
+   <link rel="stylesheet" href="../assets/styles/form.css">
    <title>Cadastro</title>
 </head>
 <body>
@@ -30,20 +30,17 @@
    </nav>
 
    <!-- **** Formulário de Cadastro **** -->
-   <!-- ...existing code... -->
    <div class="container mt-5">
       <div class="row justify-content-center align-items-start">
          <div class='alert alert-secondary mt-0 mb-4 text-center'>Vitrine</div>
       </div>
 
-      <div class="table-responsive m-1 mt-4">
-         <table class="table table-bordered table-hover" id="tabela"></table>
-      </div>
+      <div id="vitrine" class="row justify-content-start"></div>
    </div>
 
    <!-- **** Scripts **** -->
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-   <script src="./assets/scripts/vitrine.js"></script>
+   <script src="/scripts/vitrine.js"></script>
 </body>
 </html>
