Atualização Menu (Main)

--- a/private/pages/main.html
+++ b/private/pages/main.html
@@ -25,11 +25,12 @@
                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cadastro</a>
                
                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="./cadastro/cliente.html">Clientes</a>
-                  <a class="dropdown-item" href="./cadastro/fornecedor.html">Fornecedores</a>
-                  <a class="dropdown-item" href="./cadastro/entregador.html">Entregadores</a>
-                  <a class="dropdown-item" href="./cadastro/categoria.html">Categoria</a>
-                  <a class="dropdown-item" href="./cadastro/produto.html">Produtos</a>
+                  <a class="dropdown-item" href="./cliente.html">Clientes</a>
+                  <a class="dropdown-item" href="./fornecedor.html">Fornecedores</a>
+                  <a class="dropdown-item" href="./entregador.html">Entregadores</a>
+                  <a class="dropdown-item" href="./categoria.html">Categoria</a>
+                  <a class="dropdown-item" href="./produto.html">Produtos</a>
+                  <a class="dropdown-item" href="./usuario.html">Usuários</a>
                </div>
             </li>
          </ul>
